syntax = "proto3";

option go_package = "amusingx.fit/amusingx/protos/pangu/service/pangu/proto";

package panguservice;

message SubProduct {
  int64  id = 1;
  string name = 2;
  string desc = 3;
  int64 product_id = 4 [json_name="product_id"];
  string currency = 5;
  int64 price = 6;
  int64 stock = 7;
  repeated int64 attribute_id = 8 [json_name="attribute_id"];
}
