syntax = "proto3";

option go_package = "amusingx.fit/amusingx/protos/pangu/service/pangu/proto";

package panguservice;

message SubProductDeleteRequest {
  int64 id = 1;
}

message SubProductDeleteResponse {
  bool Result = 1;
}
