package charonserver

import (
	"amusingx.fit/amusingx/protos/pangu/service/pangu/proto"
	"context"
)

func (s *CharonServer) SubProductCreate(ctx context.Context, in *proto.SubProductCreateRequest) (*proto.SubProduct, error) {
	return nil, nil
}
func (s *CharonServer) SubProductDelete(ctx context.Context, in *proto.SubProductDeleteRequest) (*proto.SubProductDeleteResponse, error) {
	return nil, nil
}
func (s *CharonServer) SubProducts(ctx context.Context, in *proto.SubProductListRequest) (*proto.SubProductListResponse, error) {
	return nil, nil
}
func (s *CharonServer) SubProduct(ctx context.Context, in *proto.SubProductRequest) (*proto.SubProduct, error) {
	return nil, nil
}
func (s *CharonServer) SubProductUpdate(ctx context.Context, in *proto.SubProductUpdateRequest) (*proto.SubProduct, error) {
	return nil, nil
}
